# Particle-Filter-for-e-puck-on-Webots

./: .gitignore
controllers/CppController/: .gitignore  CppController.cbp  CppController.cpp  CppController.exe_webots  CppController.h  CppController.layout  Makefile  Map.h  MyClass.cpp  MyClass.h  Observation.cpp  Observation.h  Particle.cpp  Particle.h  SensorModel.cpp  SensorModel.h  common.h  main.cpp
controllers/MyController/: .gitignore  Action.cpp  Action.h  CMakeLists.txt  Cell.cpp  Cell.h  Gaussian.cpp  Gaussian.h  MainController.cpp  MainController.cpp.bak  MainController.cpp.bak2  MainController.h  Map.cpp  Map.h  Observation.cpp  Observation.h  Odometry.cpp  Odometry.h  Particle.cpp  Particle.h  ParticleFilter.cpp  ParticleFilter.h  Point.cpp  Point.h  SensorModel.cpp  SensorModel.h  Visualizer.cpp  Visualizer.h  code-for-simulation-senosrs.cpp  common.cpp  common.h  env-s.txt  env.txt  main.cpp  map-s.txt  map.txt  params-func.txt  params.txt  playground.tpl.cpp  sensorMean-i.txt  (+6 more)
controllers/MyController/freeglut/doc/: freeglut_user_interface.html
controllers/PythonController/: PythonController.py
controllers/e-puck/: .e-puck.exe.signature  e-puck.c  e-puck.d  e-puck.exe_webots
controllers/obstacle/: .obstacle.bsg.signature  obstacle.bsg
protos/: EPuckNoPhysics.proto  EPuckSound.proto
worlds/: .final.wbt.project  final.wbt
